--- a/index.html
+++ b/index.html
@@ -14,15 +14,6 @@
     <title>迪噢叢林旅宿 | The Jungle House - 恆春墾丁包棟民宿首選</title>
     <meta name="description" content="迪噢叢林旅宿提供優質恆春包棟與墾丁包棟服務，Google 4.7星好評推薦！我們是優質墾丁寵物友善民宿，鄰近恆春市區全聯與南灣，提供專業KTV與烤肉設備，是家族旅遊、員工旅遊首選。">
     <meta name="keywords" content="墾丁包棟, 恆春包棟, 寵物友善民宿, 墾丁KTV民宿, 墾丁烤肉民宿, 家族旅遊, 員工旅遊, The Jungle House, 恆春民宿推薦, 墾丁民宿推薦, 恆春親子包棟, 墾丁CP值最高民宿">
-    
-    <!-- Open Graph / Social Media -->
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="迪噢叢林旅宿 | The Jungle House - 恆春墾丁包棟民宿首選">
-    <meta property="og:description" content="恆春包棟、墾丁包棟首選！寵物友善、專業KTV、烤肉設備，家族旅遊與員工旅遊最佳選擇。">
-    <meta property="og:image" content="photo/public/hengchun-jungle-house-living-room.webp">
-    <meta property="og:url" content="https://thejunglehouse.tw">
-
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="photo/hengchun-jungle-house-logo.webp" type="image/webp">
     
     <!-- 1. 預加載 Hero 背景圖，提升 LCP 分數 -->
@@ -38,7 +29,7 @@
         "photo/public/hengchun-jungle-house-living-room.webp",
         "photo/hengchun-jungle-house-exterior.webp"
       ],
-      "description": "位於恆春墾丁的CP值最高包棟Villa民宿。我們是寵物友善旅宿，提供專業KTV設備、戶外烤肉區、電動麻將桌及寬敞開放式廚房. 空間可容納26人，擁有大片草地與親子家庭房型。非常適合家族旅遊、公司員工旅遊。鄰近恆春市區全聯，生活機能極佳。",
+      "description": "位於恆春墾丁的CP值最高包棟Villa民宿。我們 is 寵物友善旅宿，提供專業KTV設備、戶外烤肉區、電動麻將桌及寬敞開放式廚房. 空間可容納26人，擁有大片草地與親子溜滑梯房型。非常適合家族旅遊、公司員工旅遊。鄰近恆春市區全聯，生活機能極佳。",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "龍泉路3巷10號",
@@ -84,7 +75,7 @@
         "name": "恆春包棟推薦哪一家？迪噢叢林可以容納多少人？",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "迪噢叢林旅宿是恆春包棟的首選！我們空間寬敞，最多可容納26人入住. 房型多樣化，包含雙人、四人、樓中樓及熱門的親子家庭房，非常適合作為大型家族旅遊 or 中小型公司員工旅遊的住宿地點。"
+          "text": "迪噢叢林旅宿是恆春包棟的首選！我們空間寬敞，最多可容納26人入住. 房型多樣化，包含雙人、四人、樓中樓及熱門的親子溜滑梯房，非常適合作為大型家族旅遊 or 中小型公司員工旅遊的住宿地點。"
         }
       }, {
         "@type": "Question",
@@ -178,6 +169,19 @@
             z-index: 2;
             box-sizing: border-box;
         }
+
+        /* 植物裝飾元素 (現有) */
+        .leaf-decoration {
+            position: absolute;
+            z-index: 1;
+            opacity: 0.08;
+            pointer-events: none;
+            filter: grayscale(20%);
+        }
+
+        .leaf-1 { top: 10%; right: -5%; width: 400px; transform: rotate(15deg); }
+        .leaf-2 { bottom: 5%; left: -10%; width: 500px; transform: rotate(-15deg); }
+        .leaf-3 { top: 40%; left: -5%; width: 350px; opacity: 0.05; transform: rotate(45deg); }
 
         /* SVG Section Dividers */
         .section-divider {
@@ -1448,6 +1452,11 @@
 </head>
 <body>
 
+    <!-- 植物裝飾 -->
+    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-leaves-png-images-5.png" class="leaf-decoration leaf-1" alt="迪噢叢林旅宿-南洋風植物裝飾-1" loading="lazy">
+    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-green-leaves-png-11.png" class="leaf-decoration leaf-2" alt="迪噢叢林旅宿-南洋風植物裝飾-2" loading="lazy">
+    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-leaves-png-images-5.png" class="leaf-decoration leaf-3" alt="迪噢叢林旅宿-南洋風植物裝飾-3" loading="lazy">
+
     <!-- Navigation -->
     <nav id="navbar">
         <a href="#home" class="logo">
@@ -1666,13 +1675,13 @@
                 </div>
                 <!-- Room 6 -->
                 <div class="room-card" data-aos="fade-up" data-aos-delay="200">
-                    <a href="photo/kids-pink/hengchun-jungle-house-kids-slide-room-pink.webp" data-fancybox="kids-pink" data-caption="恆春包棟民宿-親子家庭房(粉)">
+                    <a href="photo/kids-pink/hengchun-jungle-house-kids-slide-room-pink.webp" data-fancybox="kids-pink" data-caption="恆春包棟民宿-親子溜滑梯房(粉)">
                         <div class="room-img" style="background-image: url('photo/kids-pink/hengchun-jungle-house-kids-slide-room-pink.webp')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="photo/kids-pink/hengchun-jungle-house-kids-slide-room-pink-bed.webp" data-fancybox="kids-pink" data-caption="恆春包棟民宿-親子家庭房(粉)床鋪"></a>
-                        <a href="photo/kids-pink/hengchun-jungle-house-kids-slide-room-pink-slide.webp" data-fancybox="kids-pink" data-caption="恆春包棟民宿-親子家庭房(粉)溜滑梯"></a>
-                        <a href="photo/kids-pink/hengchun-jungle-house-kids-slide-room-pink-play-area.webp" data-fancybox="kids-pink" data-caption="恆春包棟民宿-親子家庭房(粉)遊戲區"></a>
+                        <a href="photo/kids-pink/hengchun-jungle-house-kids-slide-room-pink-bed.webp" data-fancybox="kids-pink" data-caption="恆春包棟民宿-親子溜滑梯房(粉)床鋪"></a>
+                        <a href="photo/kids-pink/hengchun-jungle-house-kids-slide-room-pink-slide.webp" data-fancybox="kids-pink" data-caption="恆春包棟民宿-親子溜滑梯房(粉)溜滑梯"></a>
+                        <a href="photo/kids-pink/hengchun-jungle-house-kids-slide-room-pink-play-area.webp" data-fancybox="kids-pink" data-caption="恆春包棟民宿-親子溜滑梯房(粉)遊戲區"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">親子家庭房 (粉)</h3>
@@ -1685,13 +1694,13 @@
                 </div>
                 <!-- Room 7 -->
                 <div class="room-card" data-aos="fade-up">
-                    <a href="photo/kids-green/hengchun-jungle-house-kids-slide-room-green.webp" data-fancybox="kids-green" data-caption="恆春包棟民宿-親子家庭房(綠)">
+                    <a href="photo/kids-green/hengchun-jungle-house-kids-slide-room-green.webp" data-fancybox="kids-green" data-caption="恆春包棟民宿-親子溜滑梯房(綠)">
                         <div class="room-img" style="background-image: url('photo/kids-green/hengchun-jungle-house-kids-slide-room-green.webp')"></div>
                     </a>
                     <div style="display:none;">
-                        <a href="photo/kids-green/hengchun-jungle-house-kids-slide-room-green-bed.webp" data-fancybox="kids-green" data-caption="恆春包棟民宿-親子家庭房(綠)床鋪"></a>
-                        <a href="photo/kids-green/hengchun-jungle-house-kids-slide-room-green-slide.webp" data-fancybox="kids-green" data-caption="恆春包棟民宿-親子家庭房(綠)溜滑梯"></a>
-                        <a href="photo/kids-green/hengchun-jungle-house-kids-slide-room-green-toys.webp" data-fancybox="kids-green" data-caption="恆春包棟民宿-親子家庭房(綠)玩具"></a>
+                        <a href="photo/kids-green/hengchun-jungle-house-kids-slide-room-green-bed.webp" data-fancybox="kids-green" data-caption="恆春包棟民宿-親子溜滑梯房(綠)床鋪"></a>
+                        <a href="photo/kids-green/hengchun-jungle-house-kids-slide-room-green-slide.webp" data-fancybox="kids-green" data-caption="恆春包棟民宿-親子溜滑梯房(綠)溜滑梯"></a>
+                        <a href="photo/kids-green/hengchun-jungle-house-kids-slide-room-green-toys.webp" data-fancybox="kids-green" data-caption="恆春包棟民宿-親子溜滑梯房(綠)玩具"></a>
                     </div>
                     <div class="room-info">
                         <h3 class="serif">親子家庭房 (綠)</h3>
@@ -1781,7 +1790,7 @@
             <div class="faq-grid">
                 <div class="faq-item" data-aos="fade-up">
                     <h4>Q1：恆春包棟推薦哪一家？迪噢叢林可以容納多少人？</h4>
-                    <p>A：迪噢叢林旅宿是<strong>恆春包棟</strong>首選！我們空間寬敞，最多可容納26人入住. 擁有雙人、四人、樓中樓及受歡迎的親子家庭房，非常適合大型家族旅遊 or 公司員工旅遊.</p>
+                    <p>A：迪噢叢林旅宿是<strong>恆春包棟</strong>首選！我們空間寬敞，最多可容納26人入住. 擁有雙人、四人、樓中樓及受歡迎的親子溜滑梯房，非常適合大型家族旅遊 or 公司員工旅遊.</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
                     <h4>Q2：墾丁寵物友善民宿有推薦的嗎？毛孩可以入住嗎？</h4>
@@ -1797,7 +1806,7 @@
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
                     <h4>Q5：這間民宿適合帶小朋友來嗎？有親子設施嗎？</h4>
-                    <p>A：非常適合！我們設有專門的<strong>親子家庭房</strong>，讓房間就是小樂園. 戶外大草皮也非常安全，是許多家庭推薦的<strong>恆春親子包棟</strong>首選.</p>
+                    <p>A：非常適合！我們設有專門的<strong>親子溜滑梯房</strong>，讓房間就是小樂園. 戶外大草皮也非常安全，是許多家庭推薦的<strong>恆春親子包棟</strong>首選.</p>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="200">
                     <h4>Q6：民宿有提供停車位嗎？位置好找嗎？</h4>
@@ -2134,6 +2143,80 @@
             const walk = (x - startX) * 2;
             slider.scrollLeft = scrollLeft - walk;
         });
+
+        // Falling Leaves
+        const leafContainer = document.getElementById('leafContainer');
+        const leafIcons = ['fa-leaf', 'fa-seedling'];
+        let leafInterval;
+
+        function createLeaf() {
+            const leaf = document.createElement('i');
+            leaf.className = `fas ${leafIcons[Math.floor(Math.random() * 2)]} falling-leaf`;
+            const duration = 5 + Math.random() * 5;
+            leaf.style.left = `${Math.random() * window.innerWidth}px`;
+            leaf.style.animationDuration = `${duration}s`;
+            leaf.style.fontSize = `${1 + Math.random() * 1.5}rem`;
+            leafContainer.appendChild(leaf);
+            setTimeout(() => leaf.remove(), duration * 1000);
+        }
+
+        const leafObserver = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    if (!leafInterval) leafInterval = setInterval(createLeaf, 800);
+                } else {
+                    clearInterval(leafInterval);
+                    leafInterval = null;
+                }
+            });
+        }, { threshold: 0.1 });
+        leafObserver.observe(document.getElementById('pricing'));
+
+        // Paw Prints
+        const petSection = document.getElementById('petSection');
+        const pawContainer = document.getElementById('pawContainer');
+
+        function createPawPrint(x, y, angle) {
+            const paw = document.createElement('i');
+            paw.className = 'fas fa-paw paw-print';
+            paw.style.left = `${x}px`;
+            paw.style.top = `${y}px`;
+            paw.style.transform = `rotate(${angle}deg)`;
+            pawContainer.appendChild(paw);
+            setTimeout(() => paw.remove(), 3000);
+        }
+
+        function startPawPatrol() {
+            const rect = petSection.getBoundingClientRect();
+            const width = rect.width;
+            const height = rect.height;
+            const startX = -20, startY = Math.random() * height, endX = width + 20, endY = Math.random() * height;
+            const steps = 15;
+            const stepX = (endX - startX) / steps, stepY = (endY - startY) / steps;
+            const angle = Math.atan2(endY - startY, endX - startX) * (180 / Math.PI) + 90;
+
+            let step = 0;
+            const interval = setInterval(() => {
+                const offset = (step % 2 === 0 ? 25 : -25);
+                const nx = Math.cos((angle - 180) * Math.PI / 180) * offset;
+                const ny = Math.sin((angle - 180) * Math.PI / 180) * offset;
+                createPawPrint(startX + stepX * step + nx, startY + stepY * step + ny, angle);
+                step++;
+                if (step >= steps) clearInterval(interval);
+            }, 400);
+        }
+
+        const petObserver = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    startPawPatrol();
+                    this.pawTimer = setInterval(startPawPatrol, 8000);
+                } else {
+                    clearInterval(this.pawTimer);
+                }
+            });
+        }, { threshold: 0.1 });
+        petObserver.observe(petSection);
     </script>
 </body>
 </html>
