Manual update: Enhance content and fix minor issues

--- a/index.html
+++ b/index.html
@@ -1459,9 +1459,9 @@
 <body>
 
     <!-- 植物裝飾 -->
-    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-leaves-png-images-5.png" class="leaf-decoration leaf-1" alt="迪噢叢林旅宿-南洋風植物裝飾-1" loading="lazy" width="400" height="400">
-    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-green-leaves-png-11.png" class="leaf-decoration leaf-2" alt="迪噢叢林旅宿-南洋風植物裝飾-2" loading="lazy" width="500" height="500">
-    <img src="https://www.transparentpng.com/download/tropical-leaves/tropical-leaves-png-images-5.png" class="leaf-decoration leaf-3" alt="迪噢叢林旅宿-南洋風植物裝飾-3" loading="lazy" width="350" height="350">
+    <i class="fas fa-leaf leaf-decoration leaf-1" style="font-size: 350px; color: var(--primary);"></i>
+    <i class="fas fa-seedling leaf-decoration leaf-2" style="font-size: 450px; color: var(--primary);"></i>
+    <i class="fab fa-pagelines leaf-decoration leaf-3" style="font-size: 300px; color: var(--primary);"></i>
 
     <!-- Navigation -->
     <nav id="navbar">
